[package]
name = "arysn-macro"
version = "0.1.0"
authors = ["Tahara Yoshinori <read.eval.print@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
Inflector = "0.11"
anyhow = "1"
env_logger = "*"
log = "*"
proc-macro2 = "*"
quote = "*"
syn = "*"
tokio = { version = "0.2", features = ["full"] }
tokio-postgres = "0.5"
