[package]
name = "arysn-test"
version = "0.1.0"
authors = ["Tahara Yoshinori <read.eval.print@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arysn = { path = "../arysn" }
async-recursion = "0.3"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.7"
log = "0.4"
postgis = { version = "0.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
tokio-postgres = { version = "^0.5.5", features = ["with-chrono-0_4", "with-uuid-0_8"] }
uuid = { version = "0.8", features = ["serde"] }
postgres-types = { version = "0.1", features = ["derive"] }

[build-dependencies]
anyhow = "1"
arysn = { path = "../arysn" }

[features]
gis = ["postgis", "arysn/gis"]