[package]
name = "arysn-test"
version = "0.1.0"
authors = ["Tahara Yoshinori <read.eval.print@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arysn = { path = "../arysn" }
async-recursion = "0.3"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { package="tokio", version = "^1.0", features = ["full"] }
tokio-postgres = { package = "tokio-postgres", version = "^0.7", features = ["with-chrono-0_4", "with-uuid-0_8"] }
uuid = { version = "0.8", features = ["serde"] }
postgres-types = { package = "postgres-types", version = "0.2", features = ["derive"] }

[build-dependencies]
anyhow = "1"
arysn = { path = "../arysn", default-features = false }

[features]
gis = ["arysn/gis"]
