[package]
name = "arysn"
version = "0.3.2"
authors = ["Tahara Yoshinori <read.eval.print@gmail.com>"]
edition = "2018"
license = "MIT"
description = "ORM code generator"
categories = ["database", "development-tools::build-utils"]
keywords = ["orm", "database"]
readme = "../README.md"
repository = "https://github.com/quek/arysn"

[dependencies]
Inflector = "0.11"
anyhow = "1"
chrono = "0.4"
deadpool-0_5 = { package = "deadpool", version = "^0.5", optional = true }
deadpool-0_8 = { package = "deadpool", version = "^0.8", optional = true }
deadpool-postgres-0_5 = { package = "deadpool-postgres", version = "^0.5", optional = true }
deadpool-postgres-0_9 = { package = "deadpool-postgres", version = "^0.9", optional = true }
dyn-clone = "1"
env_logger = "0.9"
log = "0.4"
proc-macro2 = "1"
quote = "1"
syn = "1"
thiserror = "1.0"
tokio-0_2 = { package="tokio", version = "^0.2", features = ["full"], optional = true }
tokio-1_x = { package="tokio", version = "^1.0", features = ["full"], optional = true }
tokio-postgres-0_5 = { package = "tokio-postgres", version = "^0.5.5", features = ["with-chrono-0_4"], optional = true }
tokio-postgres-0_7 = { package = "tokio-postgres", version = "^0.7", features = ["with-chrono-0_4"], optional = true }

# gis
bytes-0_5 = { package = "bytes", version = "^0.5", optional = true }
bytes-1_x = { package = "bytes", version = "^1.0", optional = true }
postgis-0_7 = { package = "postgis", version = "0.7", optional = true }
postgis-0_8 = { package = "postgis", version = "0.8", optional = true }
postgres-0_17 = { package = "postgres", version = "0.17", optional = true }
postgres-0_19 = { package = "postgres", version = "0.19", optional = true }
serde = { version = "1", optional = true }

[dev-dependencies.serde_json]
version = "1"

[features]
default = ["with-tokio-1_x"]
gis = ["bytes-1_x", "postgis-0_8", "postgres-0_19", "serde"]
gis-tokio-0_2 = ["bytes-0_5", "postgis-0_7", "postgres-0_17", "serde"]
with-tokio-0_2 = ["tokio-0_2", "tokio-postgres-0_5", "deadpool-0_5", "deadpool-postgres-0_5"]
with-tokio-1_x = ["tokio-1_x", "tokio-postgres-0_7", "deadpool-0_8", "deadpool-postgres-0_9"]
