[package]
name = "arysn"
version = "0.5.0"
authors = ["Tahara Yoshinori <read.eval.print@gmail.com>"]
edition = "2018"
license = "MIT"
description = "ORM code generator"
categories = ["database", "development-tools::build-utils"]
keywords = ["orm", "database"]
readme = "../README.md"
repository = "https://github.com/quek/arysn"

[dependencies]
anyhow = "1"
chrono = "0.4"
deadpool = { package = "deadpool", version = "^0.9"}
deadpool-postgres = { package = "deadpool-postgres", version = "^0.10"}
dyn-clone = "1"
env_logger = "0.9"
log = "0.4"
proc-macro2 = "1"
quote = "1"
syn = "1"
thiserror = "1.0"
tokio = { package="tokio", version = "^1.0", features = ["full"] }
tokio-postgres = { package = "tokio-postgres", version = "^0.7", features = ["with-chrono-0_4"] }

# gis
bytes = { package = "bytes", version = "^1.0", optional = true }
postgis = { package = "postgis", version = "0.8", optional = true }
postgres = { package = "postgres", version = "0.19", optional = true }
serde = { version = "1", optional = true }

[dev-dependencies.serde_json]
version = "1"

[features]
gis = ["bytes", "postgis", "postgres", "serde"]
